--- a/style.css
+++ b/style.css
@@ -1,13 +1,27 @@
 canvas {
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: auto;
-    margin-right: 180px;
-    display: block;
+  padding-left: 0;
+  padding-right: 0;
+  margin: 0 auto;
+  display: block;
 }
 
 #start-button {
   border: 4px solid black;
   font-size: 24px;
+}
+
+body {
+  background: pink;
+  text-align: center;
+}
+
+h1 {
+  font-size: 100px;
+  
+}
+
+a {
+  font-size: 35px;
+  text-decoration: none;
 }
 
