--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-canvas {
-  margin: 0 350px; 
-}
-
-#start-button {
+button {
   border: 4px solid black;
   font-size: 24px;
+}
+
+#game-background {
+  background-image: url("./Images/booback.jpg");
 }
 
 #cover {
@@ -12,11 +12,31 @@ canvas {
   text-align: center;
 }
 
-h1 {
-  font-size: 100px;
+#game-board {
+  margin-top: 30px;
 }
 
-a {
+.leftside {
+  padding: 180px 20px;
+}
+
+.lefttext {
+  padding-top: 90px;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.gameTitle {
+  font-size: 80px;
+  padding-top: 100px;
+}
+
+.textindex {
+  font-size: 20px;
+  padding: 8px 0;
+}
+
+.startbtn {
   font-size: 35px;
   text-decoration: none;
   background-color: #31D97D;
@@ -26,11 +46,14 @@ a {
   border-radius: 10px;
 }
 
-p {
-  font-size: 20px;
-  padding: 5px 0;
+.button1 {
+  padding: 5px;
+  background:#31D97D;
+  border: 2px solid black;
+  border-radius: 8px;
+  font-size: 25px;
 }
 
-/*#game-board {
-  background-image: url("")
-}*/
+i {
+  padding: 4px;
+}
